--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "zod": "^3.22.1"
+  },
+  "devDependencies": {
+    "daisyui": "^3.5.1"
   }
 }
