--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "13.4.13",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "tailwind-merge": "^1.14.0",
@@ -33,6 +34,7 @@
     "zod": "^3.22.1"
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.15.0",
     "daisyui": "^3.5.1"
   }
 }
